# Distributed-Systems-Profiler

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
config/grafana/provisioning/dashboards/: dashboards.yml  example_distributed_dashboard.json
config/grafana/provisioning/datasources/: datasource.yml
config/prometheus/: prometheus.yml
scripts/: hey.sh  k6.js  load_test.py  requirements-loadtest.txt
src/profiler_engine/: CMakeLists.txt
src/profiler_engine/include/: data_analyzer.h  prometheus_client.h
src/profiler_engine/src/: data_analyzer.cpp  main.cpp  prometheus_client.cpp
src/profiler_engine/tests/: rp_test.cpp
src/services/common/: metrics_middleware.py
src/services/service1/: Dockerfile  app.py
src/services/service2/: Dockerfile  app.py
src/services/service3/: Dockerfile  app.py
tests/: requirements-test.txt  test_service1.py
